New in version 0.4.0



23/06/2015 Version 0.3.0 of thermo_pw is now frozen.

New in version 0.3.0:

 Found a bug that influenced the calculation of anharmonic properties.

 Introduced support for the thermal expansion of hexagonal, tetragonal
 and orthorhombic solids.

 Added the possibility to plot the phonon frequencies and the Gruneisen
 parameters at a geometry that corresponds to a given temperature.

 Introduced other two algorithms to compute the elastic constants.

13/03/2015    Version 0.2.0 of thermo_pw is now frozen.

New in version 0.2.0:
    Started a collection of interesting inputs for the thermo_pw package.

    Introduced the group-subgroup relation to join the bands at the
    edges of the path.
    Written a small manual to intepret the color codes of the bands and
    of the phonon dispersions.

    Introduced the possibility to plot the surface band structure.

    Introduced some tools to work with space groups and to generate
    supercells, slabs, and ribbons.

28/11/2014    Version 0.1.0 of thermo_pw is now frozen.
