@@ -32,7 +32,8 @@ SUBROUTINE bcast_thermo_input()
   USE control_conv,    ONLY : nke, deltake, nkeden, deltakeden, &
                               nnk, deltank, nsigma, deltasigma
   USE control_elastic_constants, ONLY : delta_epsilon, ngeo_strain, &
-                              frozen_ions, elastic_algorithm, poly_degree
+                              epsilon_0, frozen_ions, elastic_algorithm, &
+                              poly_degree
   USE piezoelectric_tensor, ONLY : nppl
   USE control_2d_bands,     ONLY : lprojpbs, nkz, sym_divide, identify_sur, &
                                    gap_thr, sur_layers, sur_thr, force_bands, &
@@ -84,6 +85,7 @@ SUBROUTINE bcast_thermo_input()
   CALL mp_bcast( nkeden, meta_ionode_id, world_comm )
   CALL mp_bcast( deltakeden, meta_ionode_id, world_comm )
   CALL mp_bcast( delta_epsilon, meta_ionode_id, world_comm )
+  CALL mp_bcast( epsilon_0, meta_ionode_id, world_comm )
   CALL mp_bcast( frozen_ions, meta_ionode_id, world_comm )
   CALL mp_bcast( elastic_algorithm, meta_ionode_id, world_comm )
   CALL mp_bcast( poly_degree, meta_ionode_id, world_comm )
