@@ -1,6 +1,11 @@
 New in version 0.4.0
 
+Increased the maximum allowed number of steps in ionic relaxations.
 
+Introduced a minium strain in the calculation of elastic constants.
+
+Introduced a tool that reads the elastic constants of a solid and
+computes the Voigt-Reuss-Hill averages separately from the main code.
 
 23/06/2015 Version 0.3.0 of thermo_pw is now frozen.
 
